--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f887b3">  <td>23/10/19 16:22:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.LoginTest@2a8448fa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@798310141</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>23/10/19 16:23:08</td>   <td>10650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testUsers()[pri:0, instance:com.test.LoginTest@2a8448fa]">testUsers</td> 
-  <td>main@798310141</td>   <td></td> </tr>
+<tr bgcolor="b1e9b8">  <td>23/12/28 10:25:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.test.LoginTest@5b799640]">loginTest</td> 
+  <td>main@629454893</td>   <td></td> </tr>
+<tr bgcolor="b1e9b8">  <td>23/12/28 10:25:48</td>   <td>-10397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.LoginTest@5b799640]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@629454893</td>   <td></td> </tr>
+<tr bgcolor="b1e9b8">  <td>23/12/28 10:25:59</td>   <td>1089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.LoginTest@5b799640]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@629454893</td>   <td></td> </tr>
+<tr bgcolor="b1e9b8">  <td>23/12/28 10:26:07</td>   <td>8408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testUsers()[pri:0, instance:com.test.LoginTest@5b799640]">testUsers</td> 
+  <td>main@629454893</td>   <td></td> </tr>
 </table>
